<resources>
    <string name="app_name">FabricatorScanner</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="fabricator">Fabricator</string>
    <string name="mattress">Mattress</string>
    <string name="title_notifications">Notifications</string>
    <string name="save">Save</string>
    <string name="clear">Clear Field\n</string>
    <string name="saving">Saving…</string>
    <string name="add">Add</string>
    <string name="mattress_code">Mattress Code</string>
    <string name="delete">Delete</string>
</resources>